# dns_proxy

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  config.json  config_dns.json  config_http.json  response.html
src/: config.rs  lib.rs  main.rs  packet_wrapper.rs  test.rs  windivert_packet.rs
src/dns/: config.rs  mod.rs  packet_wrapper.rs  windivert_packet.rs
src/http_server/: config.rs  mod.rs
test/: const_dns_server.py
