[package]
name = "dns_proxy"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1

[dependencies]
dns-parser = "0.8.0"
env_logger = "0.11.6"
etherparse = "0.17.0"
log = { version = "0.4.25", features = ["std", "serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
windivert = "0.6.0"
windivert-sys = "0.10.0"
