[package]
name = "dns_redirection"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dns_redirection"
path = "src/main.rs"

[[bin]]
name = "dns_proxy"
path = "src/dns/mod.rs"

[[bin]]
name = "http_server"
path = "src/http_server/mod.rs"

[profile.release]
debug = 1

[dependencies]
env_logger = "0.11.6"
etherparse = "0.17.0"
futures = "0.3.31"
http-body-util = "0.1.2"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
log = { version = "0.4.25", features = ["std", "serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
simple-dns = "0.10.0"
tokio = { version = "1.43.0", features = ["full"] }
windivert = "0.6.0"
windivert-sys = "0.10.0"
